Restructuración de ciertas clases, refractorizada la clase BaseDatos, utilizar una interfaz para los métodos de la BD, entre otros cambios.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,7 +38,8 @@ javac.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}:\
     ${libs.apache-commons-pool.classpath}:\
     ${libs.apache-commons-dbcp.classpath}:\
-    ${libs.junit_4.classpath}
+    ${libs.junit_4.classpath}:\
+    ${libs.google-gson.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
