--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,6 +1,7 @@
-deploy.ant.properties.file=/Users/gomezhyuuga/.netbeans/7.1.1/tomcat70.properties
-j2ee.server.home=/Applications/apache-tomcat-7.0.26
-j2ee.server.instance=tomcat70:home=/Applications/apache-tomcat-7.0.26
+deploy.ant.properties.file=/Users/gomezhyuuga/.netbeans/7.1.2/tomcat70.properties
+j2ee.server.domain=/Users/gomezhyuuga/.netbeans/7.1.2/apache-tomcat-7.0.22.0_base
+j2ee.server.home=/Applications/NetBeans/apache-tomcat-7.0.22
+j2ee.server.instance=tomcat70:home=/Applications/NetBeans/apache-tomcat-7.0.22:base=apache-tomcat-7.0.22.0_base
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/Users/gomezhyuuga/.netbeans/7.1.1/build.properties
+user.properties.file=/Users/gomezhyuuga/.netbeans/7.1.2/build.properties
