--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -43,7 +43,7 @@ javac.classpath=\
     ${libs.apache-commons-dbcp.classpath}:\
     ${libs.ejb3-persistence.classpath}
 # Space-separated list of extra javac options
-javac.compilerargs=-Xlint:unchecked
+javac.compilerargs=
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
